--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
           <a class="nav-link" href="#">Quiz Notes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Employee Management System</a>
+          <a class="nav-link" href="https://robwongus.github.io/PasswordGenerator/">Password Generator</a>
         </li>
+        
       </ul>
       
 
